Min-width on spacer to prevent collapse.

--- a/css/linkpurpose.css
+++ b/css/linkpurpose.css
@@ -2,6 +2,7 @@
   white-space: pre-wrap;
 }
 .link-purpose-nobreak {
+  min-width: .125em;
   white-space: nowrap;
 }
 .link-purpose-last-word {
